[gd_scene load_steps=2 format=3 uid="uid://b7lv6c8fb23jq"]

[ext_resource type="Script" path="res://Script/menu.gd" id="1_1csow"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
script = ExtResource("1_1csow")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 414.0
offset_right = 533.0
offset_bottom = 464.0
text = "Jouer"

[node name="EditorMod" type="Button" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 543.0
offset_right = 573.0
offset_bottom = 587.0
text = "Mode Edition"

[node name="Round" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 468.0
offset_right = 568.0
offset_bottom = 499.0
text = "Manche BO3"

[node name="StartColor" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 503.0
offset_right = 567.0
offset_bottom = 534.0
text = "Black"
alignment = 2

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="EditorMod" to="." method="_on_editor_mod_pressed"]
[connection signal="pressed" from="Round" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="StartColor" to="." method="_on_start_color_pressed"]
